Name: reflex-polymer
Version: 0.1
Synopsis: Polymer binding to Reflex
Description: Reflex-Polymer is a Functional Reactive Web Component Framework
License: BSD3
License-file: LICENSE
Author: Ryan Trinkle, Ian-Woo Kim
Maintainer: ianwookim@gmail.com
Stability: Experimental
Category: FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface
Build-type: Simple
Cabal-version: >=1.9.2
-- Deal with https://github.com/haskell/cabal/issues/2544 / https://github.com/haskell/cabal/issues/367
extra-source-files: src-ghc/Reflex/Dom/Internal/Foreign.hs
                    src-ghc/Reflex/Dom/Xhr/Foreign.hs
                    src-ghc/Reflex/Dom/WebSocket/Foreign.hs
                    src-ghcjs/Reflex/Dom/Internal/Foreign.hs
                    src-ghcjs/Reflex/Dom/Xhr/Foreign.hs
                    src-ghcjs/Reflex/Dom/WebSocket/Foreign.hs
                    src/Reflex/Dom/Xhr/ResponseType.hs
                    src/Reflex/Dom/Xhr/Exception.hs

library
  hs-source-dirs: src
  build-depends:
    base >= 4.7 && < 4.9,
    stm == 2.4.*,
    reflex == 0.4.*,
    dependent-sum == 0.3.*,
    dependent-map == 0.2.*,
    semigroups >= 0.16 && < 0.19,
    mtl >= 2.1 && < 2.3,
    containers == 0.5.*,
    these >= 0.4 && < 0.7,
    ref-tf == 0.4.*,
    ghcjs-dom >= 0.2.1 && < 0.3,
    transformers == 0.3.* || == 0.4.*,
    lens >= 4.7 && < 4.14,
    text == 1.2.*,
    bytestring == 0.10.*,
    data-default == 0.5.*,
    aeson >= 0.8 && < 0.11,
    time == 1.4.* || == 1.5.*,
    exception-transformers == 0.4.*,
    directory == 1.2.*,
    dependent-sum-template >= 0.0.0.4 && < 0.1,
    bifunctors >= 4.2 && < 6,
    bimap >= 0.3 && < 0.4

  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      glib == 0.13.*,
      gtk3 >= 0.13.0 && < 0.15,
      webkitgtk3 == 0.14.*,
      webkitgtk3-javascriptcore == 0.13.*,
      raw-strings-qq
    if !os(windows)
      build-depends: unix == 2.7.*

  exposed-modules:
    Reflex.Polymer
    Reflex.Polymer.Class
    Reflex.Polymer.Internal
    Reflex.Polymer.Time
    Reflex.Polymer.WebSocket
    Reflex.Polymer.Widget
    Reflex.Polymer.Widget.Basic
    Reflex.Polymer.Widget.Input
    Reflex.Polymer.Widget.Lazy
    Reflex.Polymer.Widget.Resize
    Reflex.Polymer.Xhr
    Reflex.Polymer.Location
  other-modules:
    Reflex.Polymer.Internal.Foreign
    Reflex.Polymer.WebSocket.Foreign
    Reflex.Polymer.Xhr.Foreign
    Reflex.Polymer.Xhr.ResponseType
    Reflex.Polymer.Xhr.Exception

  other-extensions: TemplateHaskell
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2 -ferror-spans

source-repository head
  type: git
  location: https://github.com/wavewave/reflex-polymer
